<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#79FCC1"
    android:orientation="vertical"
    tools:context=".SigninActivity">

    <TextView
        android:id="@+id/txtSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:elegantTextHeight="false"
        android:gravity="center"
        android:text="@string/sign_in_txt"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/email_txt"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:drawableStart="@android:drawable/sym_action_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email_txt"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textColor="#000000"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/password_txt"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:drawableStart="@android:drawable/ic_lock_lock"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password_txt"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="#000000"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <CheckBox
        android:id="@+id/checkBoxAutoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:minHeight="48dp"
        android:text="@string/autologin_txt" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="75dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/border_radius"
        android:text="@string/sign_in_txt"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/underline"
            android:text="@string/create_new_account_txt"
            android:textColor="@color/blue"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/underline"
            android:gravity="right"
            android:text="@string/forgot_password_txt"
            android:textColor="@color/blue"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</android.widget.LinearLayout>